# linear-drum-trigger

./: .gitignore  CLAUDE.md  DOSSIER_TECNICO.md  Dockerfile  GEMINI.md  MASTER_CHECKLIST.md  PROJECT_MASTER_INDEX.md  PROJECT_ROADMAP.md  README.md  REGISTRO_AVANZAMENTO.md  SESSION_HANDOVER.md  SPRINT_BOARD.md  TASK_BLUEPRINT.md  audit_datasets.py  check_sf2.py  create_probe_midi.py  data  environment.yml  gemini.md  generate_demo_batch.py  lib  lychee.toml  probe_samples.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.claude/: settings.json
.dvc/: config
04_INTELLIGENCE/: AUDIT_RESOLUTION_LOG.md  COMPETITOR_ANALYSIS.md  DATASET_CARD_BLUEPRINT.md  DOC_LINKING_STANDARD.md  Diario_Presidenza_OpenPhase.md  ENGINEERING_STANDARDS.md  MARKETING_OCULAR_PROOF.md  MARKETING_STRATEGY.md  MASTER_SCHEDULING.md  MIDI_CHRONOS_SPEC.md  MODEL_REPORT_BLUEPRINT.md  PIPELINE_STATUS.json  PROJECT_MASTER_SCHEDULE.md  PROTOCOLLO_TRAINING_WILD.md  QUANTITATIVE_MARKET_ANALYSIS.md  REGISTRO_AVANZAMENTO.md  REGISTRO_HARD_AUDIT.md  REPORT_DATASET_SOURCING.md  SCHEDULING_DOCTRINE.md  SCHEDULING_SPRINT_M2.md  SESSION_HANDOVER_REVISION.md  SPECIFICA_AI_AEC_001.md  SPECIFICA_ALGORITMICA_DCM_001.md  SPECIFICA_INTEGRAZIONE_INT_001.md  STRATEGIC_INFRASTRUCTURE_AUDIT.md  SUB_AGENT_GOVERNANCE.md  TASK_BLUEPRINT.md  TECHNICAL_COMPETITOR_AUDIT.md  TESTING_DOCTRINE.md  ZERO_PII_LOG_POLICY.md
cpp/round_trip_smoke/: CMakeLists.txt  main.cpp
docs/: INDEX.md
templates/: _how_to_read.html.j2  _how_to_read_dataset.html.j2  training_report.html.j2
tests/: README.md  conftest.py  (+1 more)
(+337 files in other folders)
